methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:7: error: type mismatch;
 found   : String
 required: java.awt.Color
  setCouleurBrosse(couleur)
                   ^FlowerPot:13: error: too many arguments for method droite: ()Unit
  droite(2)
        ^FlowerPot:15: error: too many arguments for method droite: ()Unit
  droite(2)
        ^FlowerPot:23: error: not found: value RED
dessinerFleur(RED) 
              ^